# quotebook

./: .env  pyproject.toml
quotes/: manage.py
quotes/quoteapp/: admin.py  forms.py  models.py  scraping_.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_remove_quote_description.py  0003_alter_quote_quote.py  0004_alter_author_born_date.py  0005_alter_tag_name.py  0006_alter_quote_quote.py  0007_author_user.py  0008_remove_author_user_quote_user.py  0009_alter_tag_name.py
quotes/quoteapp/templates/quoteapp/: add_quote.html  author.html  author_view.html  base.html  edit_quote.html  index.html  scrapping.html  tag.html  user_quote.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: signin.html  signup.html
