[tool.poetry]
name = "quotebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2 = "^2.9.8"
pillow = "^10.0.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
